--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "vue-headless-ui-docs",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "postcss": "^7.0.36",
+    "simple-syntax-highlighter": "^2.0.6",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "vue": "^3.0.0",
+    "vue-headless-ui": "^0.0.8",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
