--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@iconify/iconify": "^2.0.4",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
     "postcss": "^7.0.36",
     "simple-syntax-highlighter": "^2.0.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "vue": "^3.0.0",
-    "vue-headless-ui": "^0.0.8",
+    "vue-headless-ui": "^0.0.10",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
